Se reduce la cantidad de párrafos

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 </head>
 <body>
     <p>Este es para hacer un nuevo commit</p>
-    <p>Este es para hacer un nuevo commit</p>
-    <p>Este es para hacer un nuevo commit</p>
-    <p>Este es para hacer un nuevo commit</p>
-    <p>Este es para hacer un nuevo commit</p>
-    <p>Este es para hacer un nuevo commit</p>
+    <p>Este es <strong>para</strong> hacer un nuevo commit</p>
     
 </body>
 </html>
