Se cambio el titulo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <h1>Bienvenido al sitio web</h1>
     <p>Este es para hacer un nuevo commit</p>
     <p>Este es <strong>para</strong> hacer un nuevo commit</p>
     
