Agregando estructura del encabezado

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Bienvenidos</h1>
-    <p>Este es para hacer un nuevo commit</p>
-    <p>Este es <strong>para</strong> hacer un nuevo commit</p>
+    <div class="container">
+        <header>
+            <h1 class="logo">Mi sitio web</h1>
+            <ul>
+                <li>Inicio</li>
+                <li>Sobre mi</li>
+                <li>Servicios</li>
+                <li>Contacto</li>
+            </ul>
+        </header>
+    </div>
     
 </body>
 </html>
