Agregando párrafos a la web

--- a/index.html
+++ b/index.html
@@ -12,8 +12,25 @@
         <header>
             <h1 class="logo">Mi sitio web</h1>
             <ul>
+                <li>
+                    <a href="#">Inicio</a>
+                </li>
+                <li>
+                    <a href="#">Sobre nosotros</a>
+                </li>
             </ul>
         </header>
+
+        <main>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
+
+        </main>
     </div>
     
 </body>
