--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
-
         </main>
+
+        <h3>Esta es una prueba de un espacio temporal</h3>
     </div>
     
 
