--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="#">Inicio</a>
                 </li>
                 <li>
-                    <a href="#">Sobre nosotros</a>
+                    <a href="#">Servicios</a>
                 </li>
             </ul>
         </header>
@@ -36,5 +36,9 @@
     <p>Esto debe salir</p>
 
     <p>Esta es 2 prueba</p>
+    
+    <form action="">
+        <input type="text">
+    </form>
 </body>
 </html>
