Cambio de nombre en link de menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="#">Inicio</a>
                 </li>
                 <li>
-                    <a href="#">Servicios</a>
+                    <a href="#">Sobre mi</a>
                 </li>
             </ul>
         </header>
@@ -36,6 +36,16 @@
     <p>Esto debe salir</p>
 
     <p>Esta es 2 prueba</p>
+
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quas enim nam recusandae sed! Nihil, optio quibusdam autem numquam maxime dolor omnis praesentium, vero animi quidem aperiam vel unde quisquam.</p>
+    </main>
     
     <form action="">
         <input type="text">
