Corrigiendo error de stash

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="#">Inicio</a>
                 </li>
                 <li>
-                    <a href="#">Sobre mi</a>
+                    <a href="#">esto es para stash</a>
                 </li>
             </ul>
         </header>
